# webapp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PITCH.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tomorrows_meal.db
.claude/: settings.json
.claude/hooks/: post_py_lint.sh  pre_protect_config.sh  stop_unit_tests.sh
.github/workflows/: auto_improve.yml  ci.yml  deploy.yml  eval.yml  terraform-apply.yml  terraform-plan.yml
.playwright-mcp/: page-2026-07-01T11-18-46-800Z.yml  page-2026-07-01T11-19-01-636Z.yml  page-2026-07-01T11-19-18-492Z.yml  page-2026-07-01T11-19-23-553Z.yml  page-2026-07-01T11-19-28-342Z.yml  page-2026-07-01T11-19-33-444Z.yml  page-2026-07-01T11-19-50-786Z.yml
app/: a2ui.py  auth.py  daily_limit.py  database.py  firestore_store.py  main.py  metrics.py  mock_recipes.py  models.py  prompt_loader.py  schemas.py
app/agents/: context_retriever.py  feature_tag_extractor.py  health_api.py  memory_bank_client.py  notification.py  orchestrator.py  proactive.py  recipe_generator.py  reviewer.py  source_extractor.py  source_scraper.py  structured_store.py  vision_analyzer.py  voice_session.py
app/static/: app.js  index.html  style.css
docs/: alloydb_provisioning.md  architecture-notes.md  architecture.md  cloud_trace.md  cold-start-mitigation.md  data_platform_setup.md  demo-seed-data.md  demo-video-script.md  deploy.md  gemini-video-guide.md  issue-82-memory-bank-ja-verification.md  protopedia-submission.md  protopedia-thumbnail-prompt.md  seedance-prompt.md
docs/hackathon-overview/: entry.md  faq.md  judges.md  news.md  overview.md  rules.md  schedule.md
infra/terraform/: README.md  alloydb.tf  apis.tf  artifact_registry.tf  cloud_run.tf  firestore.tf  iam.tf  network.tf  outputs.tf  secrets.tf  service_account.tf  terraform.tfvars  terraform.tfvars.example  terraform_deployer.tf  variables.tf  versions.tf  workload_identity.tf
prompts/: feature_tag_extraction.md  preference_extraction.md  source_extraction.md  suggest.md  vision_analysis.md  voice_cooking_assistant.md
scripts/: auto_improve.py  db_healthcheck.py  eval.py  eval_dataset.json  migrate.py  seed_demo_data.py
tests/: conftest.py
tests/e2e/: test_fridge_flow.py  test_profile_flow.py
(+35 files in other folders)
