[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.0.0,<4.1.0",
    "fastapi>=0.139.0",
    "google-adk>=2.3.0",
    "google-genai>=2.10.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
